fixed the spacing isussue

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,3 +9,7 @@ main{
 .users-profile-card a{
   margin-right: 10px;
 }
+
+.ui.button.detail{
+  margin-bottom: 10px;
+}
